k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: service-a:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-a-service
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
