k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /submit
        pathType: Prefix
        backend:
          service:
            name: service-a-service
            port:
              number: 3000
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: service-a-service
            port:
              number: 3000
